--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,7 +6,7 @@
   width: 20%;
   padding: 1%;
   margin: auto;
-  background: #F5F5F5;
+  background: #f0f0f0;
   border-radius: 10px;
 }
 
@@ -14,10 +14,9 @@
   width: 35%;
   margin: auto;
   padding: 1%;
-  background: #F5F5F5;
+  background: #f0f0f0;
   font-weight: 300;
-  font-family: 'Open Sans', sans-serif;
-  color: #b7b7b7;
+  color: #aaaaaa;
   font-size: 20px;
   border-radius: 10px;
 }
@@ -29,8 +28,7 @@
 }
 
 .product-list {
-  font-family: 'Open Sans', sans-serif;
-  background: #F5F5F5;
+  background: #f0f0f0;
   border-radius: 10px;
   margin: auto;
 }
