--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,12 @@
  *= require_self
  */
 
-body
-{
+body {
     background: #f7f7f7;
     font-family: 'Open Sans', sans-serif;
+}
+
+.navbar-default {
+    background-color: #f0f0f0;
+    border-color: #E7E7E7;
 }
